# stm32l071_templates

./: .gitignore  Cargo.toml  Embed.toml  arm_bin_size.py  build.rs  justfile  memory.x  rust-toolchain.toml
.cargo/: config.toml
bins/: stm32l0xx-bootloader.hex
misc/: arm_bin_size.py  hexcrc
src/: cli.rs  lib.rs  main.rs  storage.rs
