[package]
edition = "2024"
name = "stm32l071_templates"
version = "0.1.0"
rust-version = "1.85.0"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = { version = "0.7.5", features = []}

embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.2.0", features = [
    "stm32l071c8",
    "time-driver-any",
    "defmt",
    "chrono",
    "unstable-pac", ] }
embassy-time = { version = "0.4.0", features = ["tick-hz-32_768", "defmt"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
defmt = "1.0.1"
# panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-io = { version = "0.6.1" }
embedded-io-async = { version = "0.6.1" }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

static_cell = { version = "2" }
portable-atomic = { version = "1.5", features = ["unsafe-assume-single-core"] }
ufmt = "0.2.0"
heapless = { version = "0.8.0", features = ["defmt-03", "ufmt"], default-features = false }

panic-abort = "0.3.2"
chrono = { version = "^0.4", default-features = false }
micromath = "2.1.0"

embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
embassy-embedded-hal = {version = "0.3.0", features = ["defmt"] }
sequential-storage = { version = "4.0.1", features = ["defmt-03", "heapless"] }

[[bin]]
name = "stm32l071_templates"
test = false
bench = false

[profile.dev]
debug = 2
lto = "fat"
opt-level = "z"
incremental = true

[profile.release]
# note: debug = true is okay - debuginfo isn't flashed to the device!
# in fact, after disabling it the binary size could be somehow larger
# debug = 2 enables defmt panic messages, doesn't work without it
debug = true
lto = "fat"
# set to true to save some more space, don't enable when using defmt
strip = false
codegen-units = 1 # Allows LLVM to perform better optimization.
opt-level = "s" # sometimes s is better, sometimes z, test every time for the best size
incremental = true # don't disable, the size is smaller with it

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "e68713e9afa629eee9a04d9a1e68393f4fe242d8" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "e68713e9afa629eee9a04d9a1e68393f4fe242d8" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "e68713e9afa629eee9a04d9a1e68393f4fe242d8" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "e68713e9afa629eee9a04d9a1e68393f4fe242d8" }